# codex-aware

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  cloudbuild.web.yaml  pyproject.toml  run-codex-aware.sh
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
deploy/web/: Dockerfile
docs/: architecture.md  chatgpt-mobile.md  dogfood.md  privacy.md  protocol.md  threat-model.md
docs/submission/: provenance.md  video-narration.md  video-script.md
examples/greenleaf-coffee/: aware.yaml
examples/neon-battleship/: aware.yaml
examples/team-todo/: aware.yaml
examples/veleur-fashion/: aware.yaml
plugins/codex-aware/: .mcp.json
plugins/codex-aware/.codex-plugin/: plugin.json
plugins/codex-aware/scripts/: mcp_server.py
plugins/codex-aware/skills/use-codex-aware/: SKILL.md
scripts/: __init__.py  check_policy.py  smoke_hosted.py
services/api/codex_aware/: __init__.py  app.py  chatgpt_app.py  models.py  postgres.py  scanner.py  seed.py  store.py
services/api/tests/: conftest.py  test_api.py  test_policy.py  test_scanner.py
