[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-aware"
version = "0.1.0"
description = "Application-owned semantic continuity for Codex"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "mcp>=1.20",
  "pydantic>=2.10",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.3"]
postgres = ["psycopg[binary]>=3.2"]

[tool.setuptools.packages.find]
where = ["services/api"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = [".", "services/api"]
addopts = "-q"
